--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,13 +11,13 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/test_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
     password: 12345678
-#  jpa:
-#    hibernate:
-#      ddl-auto: create
-#    show-sql: true
-#    properties:
-#      hibernate:
-#        format_sql: true
+  #  jpa:
+  #    hibernate:
+  #      ddl-auto: create
+  #    show-sql: true
+  #    properties:
+  #      hibernate:
+  #        format_sql: true
   redis:
     host: 127.0.0.1
     port: 6379
@@ -29,6 +29,8 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     db-config:
-      id-type: auto # ID 主键自增
+      id-type: input # ID 主键
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+  type-aliases-package:
+    com.zpf.demo.user.entity,com.zpf.demo.manager.product.entity
